--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <section class="hero">
             <h2>Your Platform for Freelance Journalism</h2>
             <p>Connect with media organizations, publish your stories, and build your career – all in one place.</p>
-            <button class="cta-button">Get Started Today</button>
+            <!-- Link added to the button -->
+            <a href="workspace.html"><button class="cta-button">Preview</button></a>
         </section>
 
         <section class="features">
